NOMAD-3401: refactor axis models to prevent label overlapping NOMAD-3401: refactor line, multibar and bubble chart models NOMAD-3401: create lineChart render method NOMAD-3401: fix single point for line chart

--- a/sugarcrm/styleguide/less/sugar-specific/nv.d3.less
+++ b/sugarcrm/styleguide/less/sugar-specific/nv.d3.less
@@ -49,7 +49,7 @@ svg .title {
 
 .nv-chart-print {
   visibility: hidden;
-  position: absolute;
+  position: absolute !important;
   left: -10000px;
   width: 720px;
   height: 480px;
@@ -201,7 +201,8 @@ svg .title {
 }
 
 .nv-axis path.domain {
-  stroke-opacity: .75;
+  stroke-width: 2px;
+  stroke: #bbb;
 }
 
 .nv-axis line,
@@ -210,6 +211,7 @@ svg .title {
   stroke: @chartTickColor;
   stroke-width: @chartTickWidth;
   stroke-opacity: .3;
+  shape-rendering: crispEdges;
 }
 
 .nv-axis line.zero {
@@ -219,7 +221,9 @@ svg .title {
 .nv-axis .nv-axisMaxMin text {
   font-weight: bold;
 }
-
+.nv-axis .nv-axisMaxMin line {
+  stroke-opacity: .75;
+}
 .nv-x.nv-axis text {
   font-size: @chartTextSize;
 }
@@ -349,19 +353,20 @@ text.nv-pie-hole-label {
 }
 
 .nv-line .nv-scatter .nv-groups .nv-point {
-  fill-opacity: 0;
-  stroke-opacity: 0;
+  fill-opacity: 1;
+  stroke-opacity: 1;
+  stroke: #fff;
 }
 
 .nv-scatter.nv-single-point .nv-groups .nv-point {
-  fill-opacity: .5;
-  stroke-opacity: .5;
+  stroke-width: 2px;
 }
 
 .nv-scatter .nv-groups .nv-point.hover,
 .nv-groups .nv-point.hover {
-  stroke-width: 20px;
+  stroke-width: 16px;
   stroke-opacity: .5 !important;
+  stroke: inherit;
 }
 
 .nv-point-paths path {
@@ -546,24 +551,9 @@ text.nv-pie-hole-label {
   .nv-y.nv-axis .domain {
     display: none;
   }
-  .nv-y.nv-axis .tick line {
-    stroke-width: 2px;
-    stroke: #bbb;
-  }
   .nv-y.nv-axis text.nv-quotaValue,
   .nv-y.nv-axis text.nv-targetQuotaValue {
     font-weight: bold;
-  }
-  .nv-x.nv-axis .domain {
-    stroke-width: 2px;
-    stroke: #bbb;
-  }
-  svg text {
-    font-size: 12px;
-    fill: #aaa;
-  }
-  svg text.nv-legend-link {
-    fill: @linkColor;
   }
   .nv-multibar .nv-groups rect {
     stroke-opacity: 1;
@@ -580,12 +570,6 @@ text.nv-pie-hole-label {
   .nv-linesWrap2 .nv-scatter .nv-groups circle {
     stroke: @white;
   }
-  .nv-x.nv-axis text,
-  .nv-legend text {
-    fill: #888;
-    font-size: 12px;
-  }
-
 }
 
 /**********
